--- a/app/globals.css
+++ b/app/globals.css
@@ -1,115 +1,176 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
+
+:root {
+  --background: oklch(0.9776 0.0066 286.2766);
+  --foreground: oklch(0.4132 0.0182 285.5764);
+  --card: oklch(1 0 0);
+  --card-foreground: oklch(0.3239 0.0123 285.6931);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.3239 0.0123 285.6931);
+  --primary: oklch(0.6487 0.1538 150.3071);
+  --primary-foreground: oklch(0.9595 0.02 286.0164);
+  --secondary: oklch(0.7686 0.1647 70.0804);
+  --secondary-foreground: oklch(0.9595 0.02 286.0164);
+  --muted: oklch(0.9233 0.0067 286.2674);
+  --muted-foreground: oklch(0.5596 0.0184 285.7912);
+  --accent: oklch(0.73 0.1577 151.3596);
+  --accent-foreground: oklch(0.9595 0.02 286.0164);
+  --destructive: oklch(0.6447 0.1838 23.8221);
+  --destructive-foreground: oklch(0.9595 0.02 286.0164);
+  --border: oklch(0.9084 0.0081 286.2374);
+  --input: oklch(0.9566 0.0067 286.2732);
+  --ring: oklch(0.7984 0 0);
+  --chart-1: oklch(0.7116 0.1812 22.8389);
+  --chart-2: oklch(0.6106 0.1141 253.3435);
+  --chart-3: oklch(0.684 0.144 154.999);
+  --chart-4: oklch(0.6958 0.1596 55.5444);
+  --chart-5: oklch(0.5772 0.1525 315.3182);
+  --sidebar: oklch(0.9626 0.0066 286.2742);
+  --sidebar-foreground: oklch(0.4132 0.0182 285.5764);
+  --sidebar-primary: oklch(0.7344 0.1416 282.8022);
+  --sidebar-primary-foreground: oklch(0.9595 0.02 286.0164);
+  --sidebar-accent: oklch(0.647 0.1756 278.4867);
+  --sidebar-accent-foreground: oklch(0.9595 0.02 286.0164);
+  --sidebar-border: oklch(0.9084 0.0081 286.2374);
+  --sidebar-ring: oklch(0.7984 0 0);
+  --font-sans: Inter, sans-serif;
+  --font-serif: Lora, serif;
+  --font-mono: Menlo, monospace;
+  --radius: 0.75rem;
+  --shadow-2xs: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.07);
+  --shadow-xs: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.07);
+  --shadow-sm: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.15),
+    6px 1px 2px -1px hsl(240 8.75% 68.6275% / 0.15);
+  --shadow: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.15),
+    6px 1px 2px -1px hsl(240 8.75% 68.6275% / 0.15);
+  --shadow-md: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.15),
+    6px 2px 4px -1px hsl(240 8.75% 68.6275% / 0.15);
+  --shadow-lg: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.15),
+    6px 4px 6px -1px hsl(240 8.75% 68.6275% / 0.15);
+  --shadow-xl: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.15),
+    6px 8px 10px -1px hsl(240 8.75% 68.6275% / 0.15);
+  --shadow-2xl: 6px 6px 12px 0px hsl(240 8.75% 68.6275% / 0.38);
+  --tracking-normal: -0.025em;
+  --spacing: 0.25rem;
+}
+
+.dark {
+  --background: oklch(0.2376 0.0114 285.4997);
+  --foreground: oklch(0.8717 0.0082 286.2288);
+  --card: oklch(0.2883 0.0145 285.4555);
+  --card-foreground: oklch(0.9145 0.0081 286.2388);
+  --popover: oklch(0.2883 0.0145 285.4555);
+  --popover-foreground: oklch(0.9145 0.0081 286.2388);
+  --primary: oklch(0.6487 0.1538 150.3071);
+  --primary-foreground: oklch(0.9595 0.02 286.0164);
+  --secondary: oklch(0.7686 0.1647 70.0804);
+  --secondary-foreground: oklch(0.9595 0.02 286.0164);
+  --muted: oklch(0.3909 0.0185 285.5145);
+  --muted-foreground: oklch(0.7186 0.0143 286.0332);
+  --accent: oklch(0.73 0.1577 151.3596);
+  --accent-foreground: oklch(0.9595 0.02 286.0164);
+  --destructive: oklch(0.6447 0.1838 23.8221);
+  --destructive-foreground: oklch(0.9595 0.02 286.0164);
+  --border: oklch(0.3116 0.0106 285.7663);
+  --input: oklch(0.3516 0.0138 285.6701);
+  --ring: oklch(0.4712 0.016 285.7703);
+  --chart-1: oklch(0.7116 0.1812 22.8389);
+  --chart-2: oklch(0.6106 0.1141 253.3435);
+  --chart-3: oklch(0.684 0.144 154.999);
+  --chart-4: oklch(0.6958 0.1596 55.5444);
+  --chart-5: oklch(0.5772 0.1525 315.3182);
+  --sidebar: oklch(0.2633 0.013 285.475);
+  --sidebar-foreground: oklch(0.8717 0.0082 286.2288);
+  --sidebar-primary: oklch(0.7344 0.1416 282.8022);
+  --sidebar-primary-foreground: oklch(0.9595 0.02 286.0164);
+  --sidebar-accent: oklch(0.647 0.1756 278.4867);
+  --sidebar-accent-foreground: oklch(0.9595 0.02 286.0164);
+  --sidebar-border: oklch(0.3116 0.0106 285.7663);
+  --sidebar-ring: oklch(0.4712 0.016 285.7703);
+  --font-sans: Inter, sans-serif;
+  --font-serif: Lora, serif;
+  --font-mono: Menlo, monospace;
+  --radius: 0.75rem;
+  --shadow-2xs: 6px 6px 12px 0px hsl(0 0% 0% / 0.07);
+  --shadow-xs: 6px 6px 12px 0px hsl(0 0% 0% / 0.07);
+  --shadow-sm: 6px 6px 12px 0px hsl(0 0% 0% / 0.15),
+    6px 1px 2px -1px hsl(0 0% 0% / 0.15);
+  --shadow: 6px 6px 12px 0px hsl(0 0% 0% / 0.15),
+    6px 1px 2px -1px hsl(0 0% 0% / 0.15);
+  --shadow-md: 6px 6px 12px 0px hsl(0 0% 0% / 0.15),
+    6px 2px 4px -1px hsl(0 0% 0% / 0.15);
+  --shadow-lg: 6px 6px 12px 0px hsl(0 0% 0% / 0.15),
+    6px 4px 6px -1px hsl(0 0% 0% / 0.15);
+  --shadow-xl: 6px 6px 12px 0px hsl(0 0% 0% / 0.15),
+    6px 8px 10px -1px hsl(0 0% 0% / 0.15);
+  --shadow-2xl: 6px 6px 12px 0px hsl(0 0% 0% / 0.38);
+}
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-  --color-sidebar-ring: var(--sidebar-ring);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar: var(--sidebar);
-  --color-chart-5: var(--chart-5);
-  --color-chart-4: var(--chart-4);
-  --color-chart-3: var(--chart-3);
-  --color-chart-2: var(--chart-2);
-  --color-chart-1: var(--chart-1);
-  --color-ring: var(--ring);
-  --color-input: var(--input);
-  --color-border: var(--border);
-  --color-destructive: var(--destructive);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-accent: var(--accent);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-muted: var(--muted);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-secondary: var(--secondary);
-  --color-primary-foreground: var(--primary-foreground);
-  --color-primary: var(--primary);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-popover: var(--popover);
-  --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+
+  --font-sans: var(--font-sans);
+  --font-mono: var(--font-mono);
+  --font-serif: var(--font-serif);
+
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+
+  --shadow-2xs: var(--shadow-2xs);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-sm: var(--shadow-sm);
+  --shadow: var(--shadow);
+  --shadow-md: var(--shadow-md);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-2xl: var(--shadow-2xl);
+
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-normal: var(--tracking-normal);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
 }
 
-:root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.97 0 0);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.922 0 0);
-  --input: oklch(0.922 0 0);
-  --ring: oklch(0.708 0 0);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.97 0 0);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.922 0 0);
-  --sidebar-ring: oklch(0.708 0 0);
-}
-
-.dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.269 0 0);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.269 0 0);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.556 0 0);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.269 0 0);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.556 0 0);
+body {
+  letter-spacing: var(--tracking-normal);
 }
 
 @layer base {
